--- a/HTML,CSS responsive/style.css
+++ b/HTML,CSS responsive/style.css
@@ -3,6 +3,10 @@
     padding: 0%;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 .navbar{
 
     padding-top: 10px;
@@ -83,6 +87,7 @@
     align-items: center;
     color: white;
     flex-direction: column;
+    max-width: 100%;
 }
 
 .btnss{
@@ -395,7 +400,179 @@
 }
 
 @media (max-width:1024px) {
+
+
+
+    .secRight1{
+        display: flex;
+        margin-top: 30px;
+        align-items: center;
+        text-align: left;
+        justify-content: center;
+        margin-left: 50px;
+        margin-right: 40px;
+        flex-direction: column;
+    }
+    
+    .Text1{
+        margin-top: 70px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .imgFluid1{
+        max-width: 100%;
+        height: 180px;
+        border: 2px solid gray;
+        border-radius: 10px;
+        margin-top: 50px;
+        
+    }
+    
+    .secTag1{
+        font-size: 60px;
+    }
+    .secsubTag1{
+        max-width: 100%;
+        margin-top: 30px;
+        font-size: 20px;
+    }
+    
+    
+    .secTag1{
+        font-size: 60px;
+    }
+    .secsubTag1{
+        font-size: 20px;
+    }
+    
+
+    .secRight2{
+        display: flex;
+        margin-top: 30px;
+        align-items: center;
+        text-align: left;
+        justify-content: center;
+        margin-left: 50px;
+        margin-right: 40px;
+        flex-direction: column;
+    }
+    
+    .Text2{
+        margin-top: 70px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .imgFluid2{
+        max-width: 100%;
+        height: 180px;
+        border: 2px solid gray;
+        border-radius: 10px;
+        margin-top: 50px;
+        
+    }
+    
+    .secTag2{
+        font-size: 60px;
+    }
+    .secsubTag2{
+        max-width: 100%;
+        margin-top: 30px;
+        font-size: 20px;
+    }
+    
+    
+    .secTag2{
+        font-size: 60px;
+    }
+    .secsubTag2{
+        font-size: 20px;
+    }.secRight3{
+        display: flex;
+        margin-top: 30px;
+        align-items: center;
+        text-align: left;
+        justify-content: center;
+        margin-left: 50px;
+        margin-right: 40px;
+        flex-direction: column;
+    }
+    
+    .Text3{
+        margin-top: 70px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .imgFluid3{
+        max-width: 100%;
+        height: 180px;
+        border: 2px solid gray;
+        border-radius: 10px;
+        margin-top: 50px;
+        
+    }
+    
+    .secTag3{
+        font-size: 60px;
+    }
+    .secsubTag3{
+        max-width: 100%;
+        margin-top: 30px;
+        font-size: 20px;
+    }
+    
+    
+    .secTag3{
+        font-size: 60px;
+    }
+    .secsubTag3{
+        font-size: 20px;
+    }.secRight4{
+        display: flex;
+        margin-top: 30px;
+        align-items: center;
+        text-align: left;
+        justify-content: center;
+        margin-left: 50px;
+        margin-right: 40px;
+        flex-direction: column;
+    }
+    
+    .Text4{
+        margin-top: 70px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .imgFluid4{
+        max-width: 100%;
+        height: 180px;
+        border: 2px solid gray;
+        border-radius: 10px;
+        margin-top: 50px;
+        
+    }
+    
+    .secTag4{
+        font-size: 60px;
+    }
+    .secsubTag4{
+        max-width: 100%;
+        margin-top: 30px;
+        font-size: 20px;
+    }
+    
+    
+    .secTag4{
+        font-size: 60px;
+    }
+    .secsubTag4{
+        font-size: 20px;
+    }
     .navbar{
+        height: 30px;
         flex-direction: column;
         align-items: center;
     }
@@ -427,11 +604,46 @@
     }
 
     .h-nav-resp{
-        height: 72px;
+        height: 22px;
     }
 
     .v-class-resp{
         opacity: 0;
+    }
+
+    .btnss{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        margin-right: 300px;
+        flex-direction: row;
+    }
+
+
+    .btnn{
+        padding:5px;
+        font-size: 20px;
+        margin-top: 100px;
+        font-family: ti;
+        background-color: white;
+        border-radius: 10px;
+        margin-bottom: 50px;
+        text-align: center;
+        align-items: center;
+    }
+    .btnnn{
+        padding:5px;
+        width: 120px;
+        font-size: 20px;
+        margin-top: 100px;
+        font-family: ti;
+        margin-left:10px;
+        background-color: white;
+        border-radius: 10px;
+        margin-bottom: 50px;
+        text-align: center;
+        align-items: center;
     }
 
 }
